<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dua_behaviortree_cpp</name>
  <version>1.0.0</version>
  <description>ROS 2 components for the integration of the BehaviorTree.CPP library in the DUA framework.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dua_btcpp_base</depend>
  <depend>dua_btcpp_types</depend>
  <depend>dua_btcpp_nodes</depend>
  <depend>btcpp_executor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
