<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dua_btcpp_nodes</name>
  <version>1.2.0</version>
  <description>Library of BT.CPP nodes for the DUA framework.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>

  <depend>behaviortree_cpp</depend>
  <depend>dua_btcpp_base</depend>
  <depend>dua_btcpp_types</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>dua_aircraft_interfaces</depend>
  <depend>dua_common_interfaces</depend>
  <depend>dua_hardware_interfaces</depend>
  <depend>dua_movement_interfaces</depend>
  <depend>dua_node_cpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
